#3346 Fix popup z-index issue.

--- a/stroom-app/src/main/resources/ui/css/SimplePopup.css
+++ b/stroom-app/src/main/resources/ui/css/SimplePopup.css
@@ -29,7 +29,7 @@
 	border: thin solid var(--dialog__border-color);
 	box-shadow: var(--popup__shadow);
 	border-radius: 8px;
-	z-index: 5;
+	z-index: 100;
 }
 
 .simplePopup-content {
